[242] impl: surface Pi throttling state
